--- a/README.adoc
+++ b/README.adoc
@@ -125,7 +125,7 @@ The CORS configuration contains the following attributes:
 
 [options="header"]
 |===
-| Configuration Attribute | Value
+| *Configuration Attribute* | *Value*
 |[hotspot=16 file=0]`domain` | The endpoint to be configured for CORS requests. The value is set to `/configurations/simple`.
 |[hotspot=17 file=0]`allowedOrigins` | Origins that are allowed to access the endpoint. The value is set to `openliberty.io`.
 |[hotspot=18 file=0]`allowedMethods` | HTTP methods that a client is allowed to use when it makes requests to the endpoint. The value is set to `GET`.
@@ -157,7 +157,7 @@ The [hotspot=testSimpleCorsRequest file=1]`testSimpleCorsRequest` test simulates
 The request is a [hotspot=get file=1]`GET` HTTP request with the following header:
 
 |===
-| Request Header | Request Value
+| Request Header | Request Valueg
 | Origin | The value is set to `openliberty.io`. Indicates that the request originates from `openliberty.io`.
 |===
 
