--- a/README.adoc
+++ b/README.adoc
@@ -39,9 +39,10 @@ Cross-Origin Resource Sharing (CORS) is a W3C specification and mechanism that y
 resources from a domain outside the current domain. In other words, CORS is a
 technique for consuming an API served from an origin different than yours.
 
-CORS is useful for requesting many kinds of data from websites other than your own, such as images, videos, scripts, style sheets, iFrames, and web fonts.
+CORS is useful for requesting different kinds of data from websites that aren't your own. 
+These types of data might include images, videos, scripts, stylesheets, iFrames, or web fonts.
 
-However, you cannot request resources from another website's domain without proper permission. In JavaScript, cross-origin requests with an `XMLHttpRequest` API and Ajax cannot happen unless CORS is enabled on the server that is receiving the request. Otherwise, same-origin security policy prevents the requests. For example, a web page that is served from the `\http://aboutcors.com` server sends a request to get data to the
+However, you cannot request resources from another website domain without proper permission. In JavaScript, cross-origin requests with an `XMLHttpRequest` API and Ajax cannot happen unless CORS is enabled on the server that receives the request. Otherwise, same-origin security policy prevents the requests. For example, a web page that is served from the `\http://aboutcors.com` server sends a request to get data to the
 `\http://openliberty.io` server. Because of security concerns, browsers block the server response unless
 the server adds HTTP response headers to allow the web page to consume the data.
 
@@ -169,7 +170,7 @@ Expect the following response headers and values if the simple CORS request is s
 
 Since you started Open Liberty in development mode at the start of the guide, press the `enter/return` key to run the tests.
 
-If the [hotspot=testSimpleCorsRequest file=1]`testSimpleCorsRequest` test passes, it will print the response headers with their values from the endpoint. The
+If the [hotspot=testSimpleCorsRequest file=1]`testSimpleCorsRequest` test passes, the response headers with their values from the endpoint are printed. The
 `/configurations/simple` endpoint now accepts simple CORS requests.
 
 Response headers with their values from the endpoint:
@@ -269,7 +270,7 @@ because the server is configured to allow all origins, and the request came with
 
 Since you started Open Liberty in development mode at the start of the guide, press the `enter/return` key to run the tests.
 
-If the [hotspot=testPreflightCorsRequest file=1]`testPreflightCorsRequest` test passes, it will print the response headers with their values from the endpoint.
+If the [hotspot=testPreflightCorsRequest file=1]`testPreflightCorsRequest` test passes, the response headers with their values from the endpoint are printed.
 The `/configurations/preflight` endpoint now allows preflight CORS requests.
 
 Response headers with their values from the endpoint:
@@ -288,8 +289,8 @@ Header Access-Control-Allow-Headers = [MyOwnHeader1, MyOwnHeader2]
 Header X-Powered-By = [Servlet/4.0]
 ```
 
-Feel free to modify the server configuration and the test code to experiment with the
-various CORS configuration attributes.
+You can modify the server configuration and the test code to experiment with the various 
+CORS configuration attributes.
 
 [role='command']
 include::{common-includes}/devmode-quit.adoc[]
