--- a/README.adoc
+++ b/README.adoc
@@ -306,8 +306,7 @@ include::{common-includes}/devmode-quit.adoc[]
 
 == Great work! You're done!
 
-You enabled CORS support in Open Liberty. You added two different
-CORS configurations to allow two kinds of CORS requests in the `server.xml` file.
+You enabled CORS support in Open Liberty. You added two different CORS configurations to allow two kinds of CORS requests in the `server.xml` file.
 
 
 include::{common-includes}/attribution.adoc[subs="attributes"]
