--- a/README.adoc
+++ b/README.adoc
@@ -272,7 +272,7 @@ The `Access-Control-Allow-Origin` header has a value of `anywebsiteyoulike.com`
 because the server is configured to allow all origins, and the request came with an origin of
 `anywebsiteyoulike.com`.
 
-Since you started Open Liberty in development mode at the start of the guide, press the `enter/return` key to run the tests.
+include::{common-includes}/devmode-test.adoc[]
 
 If the [hotspot=testPreflightCorsRequest file=1]`testPreflightCorsRequest` test passes, the response headers with their values from the endpoint are printed.
 The `/configurations/preflight` endpoint now allows preflight CORS requests.
